# cert-checker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  core.rs  error.rs  lib.rs  main.rs  types.rs  utils.rs
tests/: cli_tests.rs  core_tests.rs  utils_tests.rs
