[package]
name = "cert-checker"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to check SSL/TLS certificates for secure websites"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
rustls = "0.21"
rustls-native-certs = "0.7"
webpki = "0.22"
chrono = "0.4"
anyhow = "1.0"
url = "2.5"
tokio-rustls = "0.24"
rustls-pki-types = "0.1"
x509-parser = "0.15"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls-pemfile = "1.0"

[lib]
name = "cert_checker"
path = "src/lib.rs"

[[bin]]
name = "cert-checker"
path = "src/main.rs"

[dev-dependencies]
rcgen = "0.12"
tempfile = "3"
